check null email before creating list